# Pigloo

./: README.md  pigloo.conf.example  pyproject.toml
pigloo/: bot.py  config.py  embed.py  feed.py
pigloo/cogs/: commands.py  sync.py
tests/: conftest.py  test_dpy.py  test_embed.py
